<resources>
    <string name="app_name">WeatherProject</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="forecast">Forecast</string>
    <string name="city_key">cityKey</string>
    <string name="pressure_key">pressureKey</string>
    <string name="wind_key">windKey</string>
    <string name="city_info">City Info</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_not_found">Couldn\'t find the place</string>
    <string name="select_a_city_in_the_list">Select a city in the list</string>
    <string name="city_menu">Choose city</string>
    <string name="weather_menu">Weather screen</string>
    <string name="alert_button_change_city">Try another location</string>
    <string name="city">City</string>
    <string name="weather">Weather</string>
    <string name="settings">Settings</string>
    <string name="weather_app">Weather App</string>
    <string name="alert_permission_title">Location permission</string>
    <string name="alert_permission_message">The app requires your location data to show weather, however you can choose your location manually</string>
    <string name="alert_button_accept">Accept</string>
    <string name="alert_button_dismiss">Choose manually</string>
    <string name="search_history">Search history</string>
    <string name="search_by_city">Search by city</string>
    <string name="temperature_format">Temperature Format</string>
    <string name="celsius">celsius</string>
    <string name="fahrenheit">fahrenheit</string>
    <string name="kelvin">kelvin</string>
    <string name="preferences_name">settings</string>
    <string name="temperature_key_preferences">temp_type</string>

    <string-array name="cities">
        <item>Moscow</item>
        <item>Saint Petersburg</item>
        <item>Novosibirsk</item>
        <item>Yekaterinburg</item>
        <item>Nizhny Novgorod</item>
        <item>Kazan</item>
        <item>Chelyabinsk</item>
        <item>Omsk</item>
        <item>Samara</item>
        <item>Rostov-on-Don</item>
    </string-array>
</resources>
