<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/nav_city">

    <fragment
        android:id="@+id/nav_city"
        android:name="com.sweetmay.weatherproject.CityChooseFragment"
        android:label="@string/city_menu"
        tools:layout="@layout/city_choose_fragment"/>

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.sweetmay.weatherproject.WeatherFragment"
        android:label="@string/weather"
        tools:layout="@layout/weather_fragment"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.sweetmay.weatherproject.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment"/>

    <fragment
        android:name="com.sweetmay.weatherproject.SearchHistory"
        android:id="@+id/nav_search_history"
        android:label="@string/search_history"
        tools:layout="@layout/search_history_fragment"/>


</navigation>