<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cityRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxWind"
            app:layout_constraintStart_toStartOf="@+id/editTextCity"
            app:layout_constraintTop_toBottomOf="@+id/editTextCity" />

        <CheckBox
            android:id="@+id/checkBoxWind"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/wind"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxPressure"
            app:layout_constraintStart_toStartOf="@+id/checkBoxPressure" />

        <CheckBox
            android:id="@+id/checkBoxPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/pressure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextCity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="text"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:imeOptions="actionSend"/>
        </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
